# chess-engine

./: CMakeLists.txt  README.md
chess-engine/: CMakeLists.txt
chess-engine/include/: board.h  chess.h  history.h  piece.h  types.h
chess-engine/src/: main.cpp
chess-engine/src/core/: bishop.cpp  board.cpp  board_checks.cpp  history.cpp  pawn.cpp  queen.cpp
src/ai/: evaluation.cpp  search.cpp
src/core/: king.cpp  knight.cpp  piece.cpp  rook.cpp
